samples/_failures_safe/1761091182_e5b435_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63bac9f7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_63bac9f7.c:170:16: error: expected identifier or ‘(’ at end of input
  170 |         struct Token *
      |                ^~~~~
./samples/SAFE/__tmp_63bac9f7.c:170:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63bac9f7.c:170:16: error: expected declaration or statement at end of input
